--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,11 +36,11 @@ dependencies:
   cupertino_icons: ^1.0.2
   device_preview: ^1.0.0
   dartz: ^0.10.0
-  http_interceptor: ^1.0.2
   get_it: 
   mobx: 
   flutter_mobx:
   validators: ^3.0.0
+  dio: ^4.0.4
 
 dev_dependencies:
   flutter_test:
